--- a/style.css
+++ b/style.css
@@ -109,9 +109,74 @@ h2.title {
 	border: none;
 	font-size: 18px;
 	cursor: pointer;
-	transition: transform .3s;
+	transition: transform 0.3s;
 }
 
 .delete:hover {
-	transform: scale(.8);
+	transform: scale(0.8);
+}
+
+.options {
+	padding: 80px 40px;
+	width: 500px;
+}
+
+.available-money {
+	margin-top: -10px;
+	text-align: center;
+	font-size: 60px;
+}
+
+.controls {
+	display: flex;
+	justify-content: space-around;
+	margin: 50px 0;
+}
+
+.controls button {
+	padding: 12px 20px;
+	color: var(--second-color);
+	border: 1px solid var(--border-color);
+	border-radius: 5px;
+	background: none;
+	cursor: pointer;
+	transition: color .3s, background-color .3s;
+}
+
+.controls button:hover {
+	color:var(--first-color);
+	background-color:var(--second-color);
+}
+
+.controls i {
+	margin-right: 10px;
+}
+
+.style-selection {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.color-buttons button {
+	width: 50px;
+	height: 50px;
+	margin: 0 30px;
+	border-radius: 50%;
+	cursor: pointer;
+	transition: transform .3s;
+}
+
+.color-buttons button:hover {
+	transform: scale(.9);
+}
+
+.color-buttons .light {
+	background: var(--first-color);
+	border: 1px solid var(--second-color);
+}
+
+.color-buttons .dark {
+	background: var(--second-color);
+	border: 1px solid var(--first-color);
 }
