--- a/style.css
+++ b/style.css
@@ -140,12 +140,12 @@ h2.title {
 	border-radius: 5px;
 	background: none;
 	cursor: pointer;
-	transition: color .3s, background-color .3s;
+	transition: color 0.3s, background-color 0.3s;
 }
 
 .controls button:hover {
-	color:var(--first-color);
-	background-color:var(--second-color);
+	color: var(--first-color);
+	background-color: var(--second-color);
 }
 
 .controls i {
@@ -164,11 +164,11 @@ h2.title {
 	margin: 0 30px;
 	border-radius: 50%;
 	cursor: pointer;
-	transition: transform .3s;
+	transition: transform 0.3s;
 }
 
 .color-buttons button:hover {
-	transform: scale(.9);
+	transform: scale(0.9);
 }
 
 .color-buttons .light {
@@ -179,4 +179,82 @@ h2.title {
 .color-buttons .dark {
 	background: var(--second-color);
 	border: 1px solid var(--first-color);
+}
+
+.add-transaction-panel {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	color: white;
+	background-image: linear-gradient(
+		180deg,
+		rgba(65, 21, 6, 1) 0%,
+		rgba(120, 41, 15, 1) 62%
+	);
+}
+
+.add-transaction-panel h2.title {
+	margin-bottom: 0;
+}
+
+.add-transaction-panel label {
+	margin-top: 40px;
+	margin-bottom: 5px;
+	font-size: 26px;
+}
+
+.add-transaction-panel small {
+	margin-bottom: 15px;
+	font-style: italic;
+	color: #ddd;
+}
+
+.add-transaction-panel input,
+.add-transaction-panel select {
+	width: 800px;
+}
+
+.add-transaction-panel input,
+.add-transaction-panel select,
+.add-transaction-panel button {
+	padding: 10px 20px;
+	border: 1px solid black;
+	border-radius: 5px;
+}
+
+.add-transaction-panel input,
+.add-transaction-panel select,
+.add-transaction-panel option {
+	font-size: 18px;
+}
+
+.add-transaction-panel .panel-buttons {
+	display: flex;
+	justify-content: center;
+	margin-top: 30px;
+}
+
+.add-transaction-panel button {
+	margin: 0 30px;
+	padding: 15px 40px;
+	font-size: 18px;
+	color: #fff;
+	border: 1px solid #fff;
+	background: none;
+	cursor: pointer;
+	transition: background-color .3s;
+}
+
+.add-transaction-panel button:hover {
+background-color: rgb(66, 23, 9);
+}
+
+.panel-buttons i {
+	margin-right: 10px;
 }
