JS - following functions added: show panel, close panel, check form, clear inputs

--- a/style.css
+++ b/style.css
@@ -182,7 +182,8 @@ h2.title {
 }
 
 .add-transaction-panel {
-	display: flex;
+	/* display: flex; */
+	display: none;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
